--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
         <!-- Start of Async Drift Code -->
+        <!-- Hotjar Tracking Code for https://elkharraz.design -->
+          <script>
+              (function(h,o,t,j,a,r){
+                  h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+                  h._hjSettings={hjid:1133971,hjsv:6};
+                  a=o.getElementsByTagName('head')[0];
+                  r=o.createElement('script');r.async=1;
+                  r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+                  a.appendChild(r);
+              })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+          </script>
           <script>
           "use strict";
 
@@ -112,7 +123,7 @@
                         </div>
                     </div>
                     <div class="banner_bottom boxs">
-                        <a href="#bottom"><img src="img/explore.svg" alt="explore" class="img-responsive img_show"><img src="img/explore_hover.svg" alt="explore_hover" class="img-responsive img_hide">Explore</a>
+                        <a href="#bottom"><img src="img/explore.svg" alt="explore" class="img-responsive img_show"><img src="img/explore_hover.svg" alt="explore_hover" class="img-responsive img_hide">Explore Projects</a>
                     </div>
                 </div>
 
