--- a/projects.html
+++ b/projects.html
@@ -78,9 +78,9 @@
         <!-- hna bdina -->
         <section class="feature boxs">
             <div class="container">
-                  <div class="card-columns">
-                    <div class="card">
-                      <div class="projects_wraper">
+                  <div class="card-columns2">
+                    <div class="card2">
+                      <div class="projects_wraper2">
                           <a href="project-details.html"><div class="project hovereffect">
                             <a href="https://placeholder.com"><img src="img/work_img1.png" alt="img1" class="img-responsive"></a>
 
@@ -88,8 +88,8 @@
                           <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                       </div>
                     </div>
-                    <div class="card">
-                      <div class="projects_wraper">
+                    <div class="card2">
+                      <div class="projects_wraper2">
                           <a href="project-details.html"><div class="project hovereffect">
                             <a href="https://placeholder.com"><img src="img/work_img2.png" alt="img1" class="img-responsive"></a>
 
@@ -97,16 +97,16 @@
                           <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                       </div>
                     </div>
-                    <div class="card">
-                      <div class="projects_wraper">
+                    <div class="card2">
+                      <div class="projects_wraper2">
                           <a href="project-details.html"><div class="project hovereffect">
                             <a href="https://placeholder.com"><img src="img/work_img3.png" alt="img1" class="img-responsive"></a>
 
                           <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                       </div>
                     </div>
-                    <div class="card">
-                      <div class="projects_wraper">
+                    <div class="card2">
+                      <div class="projects_wraper2">
                           <a href="project-details.html"><div class="project hovereffect">
                             <a href="https://placeholder.com"><img src="img/work_img4.png" alt="img1" class="img-responsive"></a>
 
