add google analytics

--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
         <!-- Start of Async Drift Code -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+          <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91610834-3"></script>
+          <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-91610834-3');
+          </script>
+
         <!-- Hotjar Tracking Code for https://elkharraz.design -->
           <script>
               (function(h,o,t,j,a,r){
