--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </script>
 
         <!-- Hotjar Tracking Code for https://elkharraz.design -->
-          <script>
+          <script>8
               (function(h,o,t,j,a,r){
                   h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
                   h._hjSettings={hjid:1133971,hjsv:6};
@@ -101,8 +101,8 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="nav navbar-nav navbar-right">
-                                  <!-- <li><a href="about.html">About</a></li> -->
-                                <li><a href="projects.html">Work</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <!-- <li><a href="projects.html">Work</a></li>  -->
                                 <li><a href="#">🎖️ resume</a></li>
                             </ul>
                         </div>
@@ -162,8 +162,8 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://placeholder.com"><img src="img/img1.png" alt="img1" class="img-responsive"></a>
-                                  <h3>mySchneider Electric app </h3>
+                                  <a href="#"><img src="img/img1.png" alt="img1" class="img-responsive"></a>
+                                  <a href="#"><h3>mySchneider Electric app </h3></a>
                                   <h2>tailored services, 24/7 access to our catalog, expert support and information</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -174,8 +174,8 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://placeholder.com"><img src="img/img2.png" alt="img1" class="img-responsive"></a>
-                                  <h3>Startup Patterns</h3>
+                                  <a href="#"><img src="img/img2.png" alt="img1" class="img-responsive"></a>
+                                  <a href="#"><h3>Startup Patterns</h3></a>
                                   <h2>Bite-sized startup lessons for busy founders.</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -187,7 +187,7 @@
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
                                   <a href="https://placeholder.com"><img src="img/img3.png" alt="img1" class="img-responsive"></a>
-                                  <h3>Home Favor</h3>
+                                  <a href="#"><h3>Home Favor</h3></a>
                                   <h2>Find quality home service professionals using local real estate agents recommendations</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -198,7 +198,7 @@
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
                                   <a href="https://placeholder.com"><img src="img/img6.png" alt="img1" class="img-responsive"></a>
-                                  <h3>Hundred and one percent</h3>
+                                  <a href="#"><h3>Hundred and one percent</h3></a>
                                   <h2>An impact fund crowdsourced via monthly paymetns thats makes investments based on which posts subscribers share on social media</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -211,7 +211,7 @@
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
                                   <a href="https://placeholder.com"><img src="img/img5.png" alt="img1" class="img-responsive"></a>
-                                  <h3>Swap monekys</h3>
+                                  <a href="#"><h3>Swap monekys</h3></a>
                                   <h2>Elle permet à ses collaborateurs un accès facile aux données partagées et fluidifie les échanges entre les collaborateurs.</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -222,7 +222,7 @@
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
                                   <a href="https://placeholder.com"><img src="img/img4.png" alt="img1" class="img-responsive"></a>
-                                  <h3>SD MAP est un outil digital SONASID</h3>
+                                  <a href="#"><h3>SD MAP est un outil digital SONASID</h3></a>
                                   <h2>Elle permet à ses collaborateurs un accès facile aux données partagées et fluidifie les échanges entre les collaborateurs.</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
