--- a/project-details.html
+++ b/project-details.html
@@ -21,6 +21,33 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+
+                <SCRIPT>
+                          function passWord() {
+                          var testV = 1;
+                          var pass1 = prompt('Please Enter Your Password',' ');
+                          while (testV < 3) {
+                          if (!pass1)
+                          history.go(-1);
+                          if (pass1.toLowerCase() == "129") {
+                          alert('You Got it Right!');
+                          window.open('www.wikihow.com');
+                          break;
+                          }
+                          testV+=1;
+                          var pass1 =
+                          prompt('Access Denied - Password Incorrect, Please Try Again.','Password');
+                          }
+                          if (pass1.toLowerCase()!="password" & testV ==3)
+                          history.go(-1);
+                          return " ";
+                          }
+              </SCRIPT>
+              <CENTER>
+                <FORM>
+                  <input type="button" value="Enter Protected Area" onClick="passWord()">
+                </FORM>
+              </CENTER>
     </head>
     <body>
         <!-- Header Start -->
