--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html" class="active">About</a></li>
-                                <li><a href="projects.html">Work</a></li>
+                                <!-- <li><a href="projects.html">Work</a></li>  -->
                                 <li><a href="#">🎖️ resume‍</a></li>
                             </ul>
                         </div>
