--- a/project-details.html
+++ b/project-details.html
@@ -64,7 +64,7 @@
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html">About</a></li>
-                                <li><a href="projects.html">Work</a></li>
+                                <!-- <li><a href="projects.html">Work</a></li>  -->
                                 <li><a href="#">🎖️ resume‍</a></li>
                             </ul>
                         </div>
