--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
                         <div class="col-sm-10 col-xs-12 noleft">
                             <div class="exper_left boxs">
                                 <h3>Product Designer</h3>
-                                <p>UnitedRemote.com (Ex: HiddenFounders.com)</p>
+                                <p>Unitedremote.com (Ex: HiddenFounders.com)</p>
                             </div>
                         </div>
                         <div class="col-sm-2 col-xs-12 noright">
@@ -195,7 +195,7 @@
                     <div class="boxs esper_box">
                         <div class="col-sm-10 col-xs-12 noleft">
                             <div class="exper_left boxs">
-                                <h3>UNIVERSITY MOHAMMED VI</h3>
+                                <h3>University MOHAMMED VI</h3>
                                 <p>Economics and Managament, <span> Rabat / Morocco</span></p>
 
                             </div>
