--- a/project-details.html
+++ b/project-details.html
@@ -202,7 +202,7 @@
                     </div>
                     <div class="contact boxs">
                         <h3>Contacts me at</h3>
-                        <div class="text-center"><a href="mailto:mr.elkharraz@gmail.com">mr.elkharraz@gmail.com</a></div>
+                        <div class="text-center"><a href="mailto:karim@elkharraz.design">Karim@elkharraz.design</a></div>
                         <p>Currently accepting enquiries for small <span> and medium sized projects.</span></p>
                     </div>
                     <div class="f_social boxs pos_f">
