--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html" class="active">About</a></li>
                                 <!-- <li><a href="projects.html">Work</a></li>  -->
-                                <li><a href="#">🎖️ resume‍</a></li>
+                                <li><a href="https://bit.ly/2Wa7JgN">🎖️ resume‍</a></li>
                             </ul>
                         </div>
                         <!-- /.navbar-collapse -->
