--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html">About</a></li>
                                 <!-- <li><a href="projects.html" class="active" >Work</a></li>  -->
-                                <li><a href="#">🎖️ resume‍</a></li>
+                                <li><a href="https://bit.ly/2Wa7JgN">🎖️ resume‍</a></li>
                             </ul>
                         </div>
                         <!-- /.navbar-collapse -->
