--- a/about.html
+++ b/about.html
@@ -47,9 +47,11 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="about.html" class="active">About</a></li>
+                                <li><a href="about.html" class="active">👨 About</a></li>
+
                                 <!-- <li><a href="projects.html">Work</a></li>  -->
                                 <li><a href="https://bit.ly/2Wa7JgN" target="_blank">🎖️ resume‍</a></li>
+                                <li><a target="_blank" href="mailto:karim@elkharraz.design">Email</a></li>
                             </ul>
                         </div>
                         <!-- /.navbar-collapse -->
@@ -132,7 +134,7 @@
                         </div>
                         <div class="col-sm-2 col-xs-12 noright">
                             <div class="exper_right boxs">
-                                <p>2016 - Today</p>
+                                <p>2018 - Today</p>
                             </div>
                         </div>
                     </div>
@@ -140,13 +142,13 @@
                     <div class="boxs esper_box">
                         <div class="col-sm-10 col-xs-12 noleft">
                             <div class="exper_left boxs">
-                                <h3>Lead UI UX Designer</h3>
+                                <h3>Lead UI/UX Designer</h3>
                                 <p>Hiddenfounders.com</p>
                             </div>
                         </div>
                         <div class="col-sm-2 col-xs-12 noright">
                             <div class="exper_right boxs">
-                                <p>2016 - 2018</p>
+                                <p>2017 - 2018</p>
                             </div>
                         </div>
                     </div>
@@ -154,7 +156,21 @@
                     <div class="boxs esper_box">
                         <div class="col-sm-10 col-xs-12 noleft">
                             <div class="exper_left boxs">
-                                <h3>UI UX Designer</h3>
+                                <h3>UI/UX Designer</h3>
+                                <p>Schneiderelectic.com</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-2 col-xs-12 noright">
+                            <div class="exper_right boxs">
+                                <p>2016 - 2017</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!--next-->
+                    <div class="boxs esper_box">
+                        <div class="col-sm-10 col-xs-12 noleft">
+                            <div class="exper_left boxs">
+                                <h3>UI/UX Designer</h3>
                                 <p>Hiddenfounders.com</p>
                             </div>
                         </div>
@@ -169,7 +185,7 @@
                     <div class="boxs esper_box">
                         <div class="col-sm-10 col-xs-12 noleft">
                             <div class="exper_left boxs">
-                                <h3>Intern (Web Designer)</h3>
+                                <h3>Graphic/Web Designer Intern</h3>
                                 <p>inovia.ma</p>
                             </div>
                         </div>
@@ -194,7 +210,7 @@
                         <div class="col-sm-10 col-xs-12 noleft">
                             <div class="exper_left boxs">
                                 <h3>NTIC Hay riad</h3>
-                                <p>Digital Communication and Development Multimedia,<span> Rabat / Morocco</span></p>
+                                <p>Digital Communication and Development Multimedia,<span> Rabat/Morocco</span></p>
                             </div>
                         </div>
                         <div class="col-sm-2 col-xs-12 noright">
@@ -208,7 +224,7 @@
                         <div class="col-sm-10 col-xs-12 noleft">
                             <div class="exper_left boxs">
                                 <h3>University MOHAMMED VI</h3>
-                                <p>Economics and Managament, <span> Rabat / Morocco</span></p>
+                                <p>Economics and Managament, <span> Rabat/Morocco</span></p>
 
                             </div>
                         </div>
@@ -222,13 +238,13 @@
                     <div class="boxs esper_box">
                         <div class="col-sm-10 col-xs-12 noleft">
                             <div class="exper_left boxs">
-                                <h3>Qadi ayad high school </h3>
-                                <p>Sciences applications, <span> Rabat / Morocco</span></p>
+                                <h3>Cadi Ayyad High School </h3>
+                                <p>Sciences applications, <span> Rabat/Morocco</span></p>
                             </div>
                         </div>
                         <div class="col-sm-2 col-xs-12 noright">
                             <div class="exper_right boxs">
-                                <p>2011 - 2013</p>
+                                <p>2008 - 2011</p>
                             </div>
                         </div>
                     </div>
