--- a/index.html
+++ b/index.html
@@ -112,9 +112,10 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="about.html">About</a></li>
+                                <li><a href="about.html">👨 About</a></li>
                                 <!-- <li><a href="projects.html">Work</a></li>  -->
                                 <li><a href="https://bit.ly/2Wa7JgN" target="_blank">🎖️ resume</a></li>
+                                <li><a target="_blank" href="mailto:karim@elkharraz.design">✉️ Email</a></li>
                             </ul>
                         </div>
                         <!-- /.navbar-collapse -->
@@ -134,7 +135,7 @@
                             <div class="col-sm-8 width767">
                                 <div class="banner_heading boxs">
                                     <h1>Hey, I'm Karim, Product Designer <span>@United Remote</span></h1>
-                                    <a href= "about.html" >More about me…</a>
+                                    <a href= "about.html" >Read more ...</a>
                                 </div>
 
                             </div>
@@ -170,36 +171,37 @@
                             </div>
                           </div>
 
+
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
                                   <a href="#"><img src="img/img1.png" alt="img1" class="img-responsive"></a>
-                                  <a href="#"><h3>mySchneider Electric app </h3></a>
-                                  <h2>tailored services, 24/7 access to our catalog, expert support and information</h2>
+                                  <a href="#"><h3>mySchneider Electric</h3></a>
+                                  <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
                           </div>
 
-
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="#"><img src="img/img2.png" alt="img1" class="img-responsive"></a>
-                                  <a href="#"><h3>Startup Patterns</h3></a>
-                                  <h2>Bite-sized startup lessons for busy founders.</h2>
-                                </div></a>
-                                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
-                            </div>
-                          </div>
-
-
-                          <div class="card">
-                            <div class="projects_wraper">
-                                <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://placeholder.com"><img src="img/img3.png" alt="img1" class="img-responsive"></a>
+                                  <a href="#"><img src="img/img3.png" alt="img3" class="img-responsive"></a>
                                   <a href="#"><h3>Home Favor</h3></a>
-                                  <h2>Find quality home service professionals using local real estate agents recommendations</h2>
+                                  <h2>🚧 Case Study soon ...</h2>
+                                </div></a>
+                                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
+                            </div>
+                          </div>
+
+
+
+                          <div class="card">
+                            <div class="projects_wraper">
+                                <a href="project-details.html"><div class="project hovereffect">
+                                  <a href="#"><img src="img/img2.png" alt="img2" class="img-responsive"></a>
+                                  <a href="#"><h3>Startup Patterns</h3></a>
+                                  <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
@@ -208,9 +210,20 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://placeholder.com"><img src="img/img6.png" alt="img1" class="img-responsive"></a>
+                                  <a href="#"><img src="img/img7.png" alt="img7" class="img-responsive"></a>
+                                  <a href="#"><h3>United Remote</h3></a>
+                                  <h2>🚧 Case Study soon ...</h2>
+                                </div></a>
+                                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
+                            </div>
+                          </div>
+
+                          <div class="card">
+                            <div class="projects_wraper">
+                                <a href="project-details.html"><div class="project hovereffect">
+                                  <a href="#"><img src="img/img6.png" alt="img6" class="img-responsive"></a>
                                   <a href="#"><h3>Hundred and one percent</h3></a>
-                                  <h2>An impact fund crowdsourced via monthly paymetns thats makes investments based on which posts subscribers share on social media</h2>
+                                  <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
@@ -221,9 +234,9 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://placeholder.com"><img src="img/img5.png" alt="img1" class="img-responsive"></a>
+                                  <a href="#"><img src="img/img5.png" alt="img5" class="img-responsive"></a>
                                   <a href="#"><h3>Swap monekys</h3></a>
-                                  <h2>Elle permet à ses collaborateurs un accès facile aux données partagées et fluidifie les échanges entre les collaborateurs.</h2>
+                                  <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
@@ -232,9 +245,9 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://placeholder.com"><img src="img/img4.png" alt="img1" class="img-responsive"></a>
-                                  <a href="#"><h3>SD MAP est un outil digital SONASID</h3></a>
-                                  <h2>Elle permet à ses collaborateurs un accès facile aux données partagées et fluidifie les échanges entre les collaborateurs.</h2>
+                                  <a href="#"><img src="img/img4.png" alt="img4" class="img-responsive"></a>
+                                  <a href="#"><h3>Sonasid</h3></a>
+                                  <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
