--- a/project-details.html
+++ b/project-details.html
@@ -75,7 +75,9 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html">About</a></li>
                                 <!-- <li><a href="projects.html">Work</a></li>  -->
+
                                 <li><a href="https://bit.ly/2Wa7JgN" target="_blank">🎖️ resume‍</a></li>
+                                <li><a target="_blank" href="mailto:karim@elkharraz.design">✉️ Email</a></li>
                             </ul>
                         </div>
                         <!-- /.navbar-collapse -->
