--- a/index.html
+++ b/index.html
@@ -229,6 +229,16 @@
                             </div>
                           </div>
 
+                          <div class="card">
+                            <div class="projects_wraper">
+                                <a href="project-details.html"><div class="project hovereffect">
+                                  <a href="#"><img src="img/img8.png" alt="img8" class="img-responsive"></a>
+                                  <a href="#"><h3>Jible</h3></a>
+                                  <h2>🚧 Case Study soon ...</h2>
+                                </div></a>
+                                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
+                            </div>
+                          </div>
 
 
                           <div class="card">
