--- a/Jible.html
+++ b/Jible.html
@@ -75,8 +75,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html">👨 About</a></li>
                                 <!-- <li><a href="projects.html">Work</a></li>  -->
-
-                                <li><a href="https://bit.ly/2Wa7JgN" target="_blank">🎖️ resume‍</a></li>
+                                <li><a href="#">🎖️ resume‍</a></li>
                                 <li><a target="_blank" href="mailto:karim@elkharraz.design">✉️ Email</a></li>
                             </ul>
                         </div>
@@ -96,12 +95,9 @@
                         <div class="boxs fbox details_res">
                             <div class="col-sm-7 width767">
                                 <div class="banner_heading boxs">
-                                    <h1>Project Name</h1>
+                                    <h1> Jible </h1>
 
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                                        nisi ut aliquip ex ea commodo consequat.
+                                    <p>An on demand service that picks-up anything you requested through the app and delivers it to your door within one hour. The service is carried-out by independent couriers, called Robios 🚴‍♀️. who can take 1 or more orders to allow users to share the cost of delivery.
                                     </p>
 
                                 </div>
@@ -115,13 +111,13 @@
                                     <div class="col-sm-4 col-xs-4">
                                         <div class="det_ux boxs">
                                             <h5>Context:</h5>
-                                            <p>Agency Project</p>
+                                            <p>Project For Interns</p>
                                         </div>
                                     </div>
                                     <div class="col-sm-4 col-xs-4 noright">
                                         <div class="det_ux boxs">
                                             <h5>Date:</h5>
-                                            <p>November 2017</p>
+                                            <p>April 2019</p>
                                         </div>
                                     </div>
                                 </div>
@@ -129,7 +125,7 @@
                             <div class="col-sm-5">
                                 <div class="boxs">
                                     <div class="banner_img home_img detail_img">
-                                        <img src="img/details_img.svg" alt="details_img" class="img-responsive">
+                                        <img src="img/Jible-pic.png" alt="details_img" class="img-responsive">
                                     </div>
                                 </div>
                             </div>
