--- a/projects.html
+++ b/projects.html
@@ -46,10 +46,10 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="about.html">About</a></li>
+                                <li><a href="about.html">👨 About</a></li>
                                 <!-- <li><a href="projects.html" class="active" >Work</a></li>  -->
                                 <li><a href="https://bit.ly/2Wa7JgN" target="_blank">🎖️ resume‍</a></li>
-                                <li><a target="_blank" href="mailto:karim@elkharraz.design">Email</a></li>
+                                <li><a target="_blank" href="mailto:karim@elkharraz.design">✉️ Email</a></li>
                             </ul>
                         </div>
                         <!-- /.navbar-collapse -->
