--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 
                                 <!-- <li><a href="projects.html">Work</a></li>  -->
                                 <li><a href="https://bit.ly/2Wa7JgN" target="_blank">🎖️ resume‍</a></li>
-                                <li><a target="_blank" href="mailto:karim@elkharraz.design">Email</a></li>
+                                <li><a target="_blank" href="mailto:karim@elkharraz.design">✉️ Email</a></li>
                             </ul>
                         </div>
                         <!-- /.navbar-collapse -->
