--- a/schneiderelectric.html
+++ b/schneiderelectric.html
@@ -73,9 +73,10 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="about.html">About</a></li>
+                                <li><a href="about.html">👨 About</a></li>
                                 <!-- <li><a href="projects.html">Work</a></li>  -->
                                 <li><a href="#">🎖️ resume‍</a></li>
+                                <li><a target="_blank" href="mailto:karim@elkharraz.design">✉️ Email</a></li>
                             </ul>
                         </div>
                         <!-- /.navbar-collapse -->
