--- a/about.html
+++ b/about.html
@@ -6,6 +6,11 @@
         <link rel="icon" href="img/favicon/favicon.ico" type="image/ico" sizes="16x16">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>About — Karim ELkharraz</title>
+
+        <!-- Fonts -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600|Roboto:400,500" rel="stylesheet">
+
         <!-- Bootstrap -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
