--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             </div>
                           </div>
 
-                    
+
 
                           <div class="card">
                             <div class="projects_wraper">
@@ -233,10 +233,10 @@
 
                           <div class="card">
                             <div class="projects_wraper">
-                                <a href="project-details.html"><div class="project hovereffect">
+                                <a href="https://sketch.cloud/s/5AmJW"><div class="project hovereffect">
                                   <a href="#"><img src="img/img8.png" alt="img8" class="img-responsive"></a>
                                   <a href="#"><h3>Jible</h3></a>
-                                  <h2>🚧 Case Study soon ...</h2>
+                                  <h2>(ScreenShots available)🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
                             </div>
