--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="#"><img src="img/img4.png" alt="img4" class="img-responsive"></a>
-                                  <a href="#"><h3>Sonasid</h3></a>
+                                  <a href="https://invis.io/BDS3NTVKM2X"><img src="img/img4.png" alt="img4" class="img-responsive"></a>
+                                  <a href="https://invis.io/BDS3NTVKM2X"><h3>Sonasid</h3></a>
                                   <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
