--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="#"><img src="img/img1.png" alt="img1" class="img-responsive"></a>
-                                  <a href="#"><h3>mySchneider Electric</h3></a>
+                                  <a href="https://sketch.cloud/s/YGJgm"><img src="img/img1.png" alt="img1" class="img-responsive"></a>
+                                  <a href="https://sketch.cloud/s/YGJgm"><h3>mySchneider Electric</h3></a>
                                   <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -212,8 +212,8 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="#"><img src="img/img6.png" alt="img6" class="img-responsive"></a>
-                                  <a href="#"><h3>Hundred and one percent</h3></a>
+                                  <a href="https://invis.io/KCS3O03JTA3"><img src="img/img6.png" alt="img6" class="img-responsive"></a>
+                                  <a href="https://invis.io/KCS3O03JTA3"><h3>Hundred and one percent</h3></a>
                                   <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
